--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -54,43 +54,52 @@
                     Margin="10,0">
                     <DatePicker x:Name="datPedidos" 
                                 SelectedDate="{x:Static sys:DateTime.Now}"
-                                Width="195" 
-                                HorizontalAlignment="Left"/>
-                    <Button 
-                        cal:Message.Attach="AtualizaPedidos(datPedidos.Text)" 
-                        HorizontalAlignment="Right" 
-                        Width="30" 
-                        Padding="2 0 2 0"
-                        Margin="15,0,0,0"
-                        MDesign:RippleAssist.IsCentered="True">
+                                Language="pt-BR"
+                                Width="90" 
+                                HorizontalAlignment="Left" 
+                                Margin="0,10,0,5"/>
+                    <Button x:Name="btnAtualizaVendas"
+                            cal:Message.Attach="AtualizaPedidos(datPedidos.Text)" 
+                            HorizontalAlignment="Right" 
+                            Width="25" Height="25"
+                            Padding="2 0 2 0"
+                            Margin="15,10,0,5"
+                            MDesign:RippleAssist.IsCentered="True">
                         <MDesign:PackIcon Kind="Refresh" />
                     </Button>
-                    <MDesign:PopupBox HorizontalAlignment="Right" Padding="2 0 2 0" Foreground="#FF918B8B" Margin="100,0,0,0">
+                    <MDesign:PopupBox 
+                        HorizontalAlignment="Right" 
+                        Padding="2 0 2 0" 
+                        Foreground="#FF918B8B" 
+                        Margin="215,10,0,5"
+                        Width="25" Height="25">
                         <StackPanel>
                             <Button Content="More"/>
                             <Button Content="Options"/>
                         </StackPanel>
                     </MDesign:PopupBox>
                 </StackPanel>
-                <Separator Grid.Row="1" Style="{StaticResource MaterialDesignDarkSeparator}" Margin="8 0 8 0"/>
-                <DataGrid 
-                    x:Name="dgResumoVendas"
-                    Grid.Row="2"
-                    ItemsSource="{Binding Vendas}"
-                    AutoGenerateColumns="False" 
-                    CanUserAddRows="False"
-                    CanUserResizeColumns="False" 
-                    CanUserReorderColumns="False" 
-                    CanUserDeleteRows="False" 
-                    CanUserResizeRows="False"
-                    IsReadOnly="True" 
-                    HeadersVisibility="Column"
-                    IsSynchronizedWithCurrentItem="True"
-                    Style="{DynamicResource DatagridCustomMDesign}" 
-                    CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                    RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                    ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
-                    Margin="10,0,0,0" RowHeight="25">
+                <Separator 
+                    Grid.Row="1" 
+                    Style="{StaticResource MaterialDesignDarkSeparator}" 
+                    Margin="8 0 8 0"/>
+                <DataGrid x:Name="dgResumoVendas"
+                          Grid.Row="2"
+                          ItemsSource="{Binding Vendas}"
+                          AutoGenerateColumns="False" 
+                          CanUserAddRows="False"
+                          CanUserResizeColumns="False" 
+                          CanUserReorderColumns="False" 
+                          CanUserDeleteRows="False" 
+                          CanUserResizeRows="False"
+                          IsReadOnly="True" 
+                          HeadersVisibility="Column"
+                          IsSynchronizedWithCurrentItem="True"
+                          Style="{DynamicResource DatagridCustomMDesign}" 
+                          CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                          RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                          ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                          Margin="10,0,10,7" RowHeight="25" Background="{x:Null}">
                     <DataGrid.Columns>
                         <DataGridTextColumn 
                     Header="VEND"
