--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -22,6 +22,7 @@
         <Model:Total_RejeicoesCNPJConverter x:Key="Total_RejeicoesCNPJConverter" />
         <Model:Total_FormPgtConverter x:Key="Total_FormPgtConverter" />
         <Model:RotaConverter x:Key="RotaConverter" />
+        <Model:RotaConverter2 x:Key="RotaConverter2" />
         <Model:ResumoVendasConverter x:Key="ResumoVendasConverter" />
         <Model:SimplificaNomeVendedorConverter x:Key="SimplificaNomeVendedorConverter" />
         <Model:SituacaoCNPJColorConverter x:Key="SituacaoCNPJColorConverter" />
@@ -35,6 +36,7 @@
 
     <Grid >
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -79,50 +81,90 @@
                         </StackPanel>
                     </MDesign:PopupBox>
                 </StackPanel>
-                <Separator 
-                    Grid.Row="1" 
+                <StackPanel Orientation="Vertical" Grid.Row="1">
+                    <Separator 
                     Style="{StaticResource MaterialDesignDarkSeparator}" 
-                    Margin="8 0 8 0"/>
-                <DataGrid x:Name="dgResumoVendas"
+                    Margin="8 0 8 0">
+                    </Separator>
+                    <StackPanel>
+                        <TextBlock Text="VEND"></TextBlock>
+                    </StackPanel>
+                </StackPanel>
+                <ListView x:Name="lvVendas"
+                          Grid.Column="0" 
                           Grid.Row="2"
-                          ItemsSource="{Binding Vendas}"
-                          AutoGenerateColumns="False" 
-                          CanUserAddRows="False"
-                          CanUserResizeColumns="False" 
-                          CanUserReorderColumns="False" 
-                          CanUserDeleteRows="False" 
-                          CanUserResizeRows="False"
-                          IsReadOnly="True" 
-                          HeadersVisibility="Column"
-                          IsSynchronizedWithCurrentItem="True"
-                          Style="{DynamicResource DatagridCustomMDesign}" 
-                          CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                          RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                          ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
-                          Margin="10,0,10,7" RowHeight="25" Background="{x:Null}">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn 
-                    Header="VEND"
-                    Binding="{Binding CodVendedor}"
-                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                    CanUserResize="False" 
-                    Width="60" SortDirection="Ascending" SortMemberPath="CodVendedor" />
-                        <DataGridTextColumn 
-                    Header="PEDS" 
-                    Binding="{Binding Pedidos.Count}"                                        
-                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                    CanUserResize="False" />
-                        <DataGridTextColumn 
-                    Header="RESUMO DE VENDAS"
-                    Binding="{Binding Pedidos, Converter={StaticResource ResumoVendasConverter}}"  
-                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                    CanUserResize="False"
-                    Width="150">
-                        </DataGridTextColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
+                          ItemsSource="{Binding Vendas}" 
+                          IsSynchronizedWithCurrentItem="True">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding CodVendedor}" FontWeight="Bold" Margin="10,0,0,0" Width="25" />
+                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource RotaConverter2}}" Margin="10,0,0,0" Width="30" />
+                                    <TextBlock Text="{Binding Pedidos.Count}" Margin="10,0,0,0" Width="25" />
+                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource ResumoVendasConverter}}" Margin="10,0,0,0"/>
+                                </StackPanel>
+                                <Separator 
+                                    Style="{StaticResource MaterialDesignDarkSeparator}" 
+                                    Margin="8,10,8,0" Height="Auto"/>
+                            </StackPanel>
+                            
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
         </MDesign:Card>
+        <DataGrid x:Name="dgPedidos"
+            ItemsSource="{Binding Vendas/Pedidos}"
+            Grid.Column="1"
+            AutoGenerateColumns="False" 
+            CanUserAddRows="False" 
+            CanUserResizeColumns="False" 
+            CanUserReorderColumns="False" 
+            CanUserDeleteRows="False" 
+            CanUserResizeRows="False" 
+            IsReadOnly="True" 
+            HeadersVisibility="Column"
+            IsSynchronizedWithCurrentItem="True" 
+            Style="{DynamicResource DatagridCustomMDesign}" 
+            CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+            RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+            ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+            Margin="10,0,0,0" SelectionMode="Single">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="PED" 
+                                    Binding="{Binding NumPedido}"                                         
+                                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                    CanUserResize="False" />
+                <DataGridTextColumn Header="ROTA" 
+                                    Binding="{Binding Cliente.Rota}"                                         
+                                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                    CanUserResize="False" />
+                <DataGridTextColumn Header="CLIENTE" 
+                    CanUserResize="False" 
+                    Width="70">
+                    <DataGridTextColumn.Binding>
+                        <MultiBinding StringFormat=" {0}-{1}">
+                            <Binding Path="Cliente.RegiaoCliente" />
+                            <Binding Path="Cliente.NumCliente" />
+                        </MultiBinding>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="R. SOCIAL" 
+                                    Binding="{Binding Cliente.Razao}" 
+                                    CanUserResize="False" 
+                                    Width="200" />
+                <DataGridTextColumn Header="VAL. PED" 
+                                    Binding="{Binding ValorTotal}" 
+                                    CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                    CanUserResize="False"
+                                    Width="80" />
+                <DataGridTextColumn Header="PESO"  
+                                    CanUserResize="False"
+                                    Width="80" />
+            </DataGrid.Columns>
+        </DataGrid>
+
 
     </Grid>
 
