--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -86,8 +86,23 @@
                     Style="{StaticResource MaterialDesignDarkSeparator}" 
                     Margin="8 0 8 0">
                     </Separator>
-                    <StackPanel>
-                        <TextBlock Text="VEND"></TextBlock>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                        <TextBlock 
+                            Text="VEND" 
+                            Margin="10,0,0,0" 
+                            FontWeight="Bold"/>
+                        <TextBlock 
+                            Text="ROTA" 
+                            Margin="10,0,0,0" 
+                            FontWeight="Bold"/>
+                        <TextBlock 
+                            Text="PEDS" 
+                            Margin="10,0,0,0" 
+                            FontWeight="Bold"/>
+                        <TextBlock 
+                            Text="RESUMO" 
+                            Margin="10,0,0,0" 
+                            FontWeight="Bold"/>
                     </StackPanel>
                 </StackPanel>
                 <ListView x:Name="lvVendas"
@@ -98,15 +113,15 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal" Margin="0,2,0,0">
                                     <TextBlock Text="{Binding CodVendedor}" FontWeight="Bold" Margin="10,0,0,0" Width="25" />
-                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource RotaConverter2}}" Margin="10,0,0,0" Width="30" />
+                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource RotaConverter2}}" Margin="15,0,0,0" Width="30" />
                                     <TextBlock Text="{Binding Pedidos.Count}" Margin="10,0,0,0" Width="25" />
-                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource ResumoVendasConverter}}" Margin="10,0,0,0"/>
+                                    <TextBlock Text="{Binding Pedidos, Converter={StaticResource ResumoVendasConverter}}" Margin="15,0,0,0"/>
                                 </StackPanel>
                                 <Separator 
                                     Style="{StaticResource MaterialDesignDarkSeparator}" 
-                                    Margin="8,10,8,0" Height="Auto"/>
+                                    Margin="8,5,8,0" Height="Auto"/>
                             </StackPanel>
                             
                         </DataTemplate>
